# pepStat

./: .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  NAMESPACE  README.md  annotations.rds  configure  configure.ac  plotting.R
R/: .NormalizeArray.R.swp  .internal.R.swp  AllClasses.R  AllMethods.R  NormalizeArray.R  SetClasses.R  SetMethods.R  computeZscores.R  create_db.R  import.R  internal.R  makeCalls.R  makePeptideSet.R  normalizeArray.R  plot.R  plotArray.R  plotArrayImage.R  readData.R  report.R  results.R  shinyPepStat.R  slidingMean.R  summarizePeptides.R  templates.R
data/: clade.rda  env.rda  hxb2.rda
examples/: pipeline.R
extra/: correlateReport.Rnw  makeReport.Rnw  makeReportMabs.Rnw  options.R  optionsMabs.R  template.Rnw  templateMabs.Rnw
inst/: DESC_backup  NS_backup  report_pepStat.Rnw
inst/doc/: full_knit.Rnw  hxb2.xls  makeReport.Rnw  pepStat.Rnw  report1.html  report1.md  report_pepStat.Rnw
inst/extdata/: README.txt  config.yaml  mapping.csv  report.R  report.Rmd  treatment.rda
inst/man_backup/: clade.Rd  deprecated.Rd  peptideSet.Rd  plotArrayImage.Rd  plotArrayResiduals.Rd  (+1 more)
man/: NormalizeArray.Rd  baselineCorrect.pSet.Rd  baseline_correct.Rd  create_db.Rd  makeCalls.Rd  makePeptideSet.Rd  normalizeArray.Rd  peptideSet-methods.Rd  peptideSet.Rd  plotArray.Rd  plotArrayImage.Rd  plotArrayResiduals.Rd  plot_clade.Rd  plot_inter.Rd  restab.Rd  shinyPepStat.Rd  slidingMean.Rd  summarizePeptides.Rd
src/: Inference.c  Makevars.in  NormalizeProbes.c  config.h.in  symbols.rds
vignettes/: Rbatch.Rout  full_knit.Rnw  pepStat.Rnw
(+22 files in other folders)
